# VRDeadPixelTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml
.openai/: hosting.json
app/: globals.css  layout.tsx  main.tsx  page.tsx  pixel-flow.tsx
openxr/: CMakeLists.txt  build.ps1
openxr/src/: main.cpp  palettes.h  shaders.h
openxr/tests/: shader_check.cpp
tests/: rendered-html.test.mjs
